web-ingress.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: 3es-app
spec:
  selector:
    matchLabels:
      run: web
  template:
    metadata:
      labels:
        run: web
    spec:
      containers:
      - image: gcr.io/google-samples/web:1.0
        imagePullPolicy: IfNotPresent
        name: web
        ports:
        - containerPort: 8080
          protocol: TCP
		  
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: web
  name: web
  namespace: 3es-app
spec:
  clusterIP: none
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: web
  sessionAffinity: None
  type: ClusterIP
  
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress-resource
  namespace: 3es-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /hello
        backend:
          serviceName: web
          servicePort: 8080  
          
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: web-ssl-ingress-resource
  namespace: 3es-app
spec:
  rules:
    - host: 3es.nz
      http:
        paths:
          -
            backend:
              serviceName: web
              servicePort: 8080
            path: /v2/hello/app
  tls:
    - hosts:
        - 3es.nz
      secretName: tls-secret
